Add fee note to donation methods

--- a/data/interfaces/default/base.html
+++ b/data/interfaces/default/base.html
@@ -244,25 +244,34 @@ ${next.modalIncludes()}
                         <p>
                             Click the button below to continue to GitHub.
                         </p>
-                        <a href="${anon_url('https://github.com/sponsors/JonnyWong16')}" target="_blank" rel="noreferrer" class="btn btn-sm btn-default" style="font-weight: 600;">
-                            <i class="fa fa-heart fa-sm" style="color: #ea4aaa;"></i>&nbsp; Sponsor
-                        </a>
+                        <p>
+                            <a href="${anon_url('https://github.com/sponsors/JonnyWong16')}" target="_blank" rel="noreferrer" class="btn btn-sm btn-default" style="font-weight: 600;">
+                                <i class="fa fa-heart fa-sm" style="color: #ea4aaa;"></i>&nbsp; Sponsor
+                            </a>
+                        </p>
+                        <p class="small-muted">(GitHub does not have a fee)</p>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="patreon-donation" style="text-align: center">
                         <p>
                             Click the button below to continue to Patreon.
                         </p>
-                        <a href="${anon_url('https://www.patreon.com/join/tautulli')}" target="_blank" rel="noreferrer">
-                            <img src="images/become_a_patron_button.png" alt="Become a Patron" width="170" height="40">
-                        </a>
+                        <p>
+                            <a href="${anon_url('https://www.patreon.com/join/tautulli')}" target="_blank" rel="noreferrer">
+                                <img src="images/become_a_patron_button.png" alt="Become a Patron" width="170" height="40">
+                            </a>
+                        </p>
+                        <p class="small-muted">(Patreon has a fee)</p>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="paypal-donation" style="text-align: center">
                         <p>
                             Click the button below to continue to PayPal.
                         </p>
-                        <a href="${anon_url('https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=6XPPKTDSX9QFL&lc=US&item_name=Tautulli&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted')}" target="_blank" rel="noreferrer">
-                            <img src="images/gold-rect-paypal-34px.png" alt="PayPal">
-                        </a>
+                        <p>
+                            <a href="${anon_url('https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=6XPPKTDSX9QFL&lc=US&item_name=Tautulli&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted')}" target="_blank" rel="noreferrer">
+                                <img src="images/gold-rect-paypal-34px.png" alt="PayPal">
+                            </a>
+                        </p>
+                        <p class="small-muted">(PayPal has a fee)</p>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="crypto-donation" style="text-align: center">
                         <p>
