--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -155,8 +155,17 @@
                                 <input type="checkbox" id="log_blacklist" name="log_blacklist" value="1" ${config['log_blacklist']}> Mask Sensitive Information in Logs
                             </label>
                             <p class="help-block">
-                                Enable to mask passwords, access tokens, and public IP addresses with asterisks (*) in the logs.<br />
+                                Enable to mask passwords, access tokens, and public IP addresses, and email addresses with asterisks (*) in the logs.<br />
                                 Note: Only logs from the time this setting is enabled will be masked. Do not post your logs publically without masking sensitive information!
+                            </p>
+                        </div>
+                        <div class="checkbox advanced-setting">
+                            <label>
+                                <input type="checkbox" id="log_blacklist_usernames" name="log_blacklist_usernames" value="1" ${config['log_blacklist_usernames']}> Mask Usernames in Logs
+                            </label>
+                            <p class="help-block">
+                                Enable to mask Plex usernames and Tautulli friendly names with asterisks (*) in the logs.<br />
+                                Note: Only logs from the time this setting is enabled will be masked.
                             </p>
                         </div>
 
