--- a/data/interfaces/default/ip_address_modal.html
+++ b/data/interfaces/default/ip_address_modal.html
@@ -13,9 +13,25 @@
             </h4>
         </div>
         <div class="modal-body" id="modal-text">
+            % if kwargs:
             <div class="col-sm-12">
                 <h4>
-                    <strong>Location Details</strong>
+                    <strong>Connection Details</strong>
+                </h4>
+            </div>
+            <div class="col-sm-12">
+                <ul class="list-unstyled">
+                    <% icon = {'0': 'times', '1': 'check'} %>
+                    <li>Location: <strong>${(kwargs['location'] or 'unknown').upper()}</strong></li>
+                    <li>Secure Connection: <i class="fa fa-${icon.get(kwargs['secure'], 'question')}"></i></li>
+                    <li>Plex Relay: <i class="fa fa-${icon.get(kwargs['relayed'], 'question')}"></i></li>
+                </ul>
+            </div>
+            % endif
+            % if public:
+            <div class="col-sm-12">
+                <h4>
+                    <strong>Geolocation Lookup</strong>
                     % if data:
                     <span id="ip_loading" style="padding-left: 5px;"><i class="fa fa-refresh fa-spin"></i></span>
                     % endif
@@ -39,7 +55,7 @@
             </div>
             <div class="col-sm-12">
                 <h4>
-                    <strong>Connection Details</strong>
+                    <strong>Whois Lookup</strong>
                     % if data:
                     <span id="isp_loading" style="padding-left: 5px;"><i class="fa fa-refresh fa-spin"></i></span>
                     % endif
@@ -57,13 +73,17 @@
                     <li>Address: <strong><span id="isp_address"></span></strong></li>
                 </ul>
             </div>
+            % endif
         </div>
         <div class="modal-footer">
+            % if data == '127.0.0.1' and kwargs.get('location') == 'wan':
+            <div style="float: right;"><span class="text-muted" id="rquote">We've traced the call. It's coming from inside the house!</span></div>
+            % endif
         </div>
     </div>
 </div>
 
-% if data:
+% if data and public:
 <script>
     function getUserLocation(ip_address) {
         $.ajax({
