--- a/data/interfaces/default/welcome.html
+++ b/data/interfaces/default/welcome.html
@@ -239,6 +239,7 @@
                         <input type="checkbox" name="refresh_libraries_on_startup" id="refresh_libraries_on_startup" value="1" checked>
                         <input type="checkbox" name="check_github" id="check_github" value="1" checked>
                         <input type="checkbox" name="log_blacklist" id="log_blacklist" value="1" checked>
+                        <input type="checkbox" name="log_blacklist_usernames" id="log_blacklist" value="1" checked>
                         <input type="checkbox" name="cache_images" id="cache_images" value="1" checked>
                         <input type="checkbox" name="notify_group_recently_added_grandparent" id="notify_group_recently_added_grandparent" value="1" checked>
                         <input type="checkbox" name="notify_group_recently_added_parent" id="notify_group_recently_added_parent" value="1" checked>
