--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -495,6 +495,13 @@
                             </div>
                         </div>
 
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="total_element_count" name="total_element_count" value="0" ${config['total_element_count']}> Total for Library Type
+                            </label>
+                            <p class="help-block">Enable to have the total number of elements for this library type listed in each library statistics card.</p>
+                        </div>
+
                         <p><input type="button" class="btn btn-bright save-button" value="Save" data-success="Changes saved successfully"></p>
 
                     </div>
