updated naming + cell data creation inc. filter

--- a/data/interfaces/default/library.html
+++ b/data/interfaces/default/library.html
@@ -306,7 +306,7 @@ DOCUMENTATION :: END
                                                     <th align="left" id="bitrate">Bitrate</th>
                                                     <th align="left" id="video_codec">Video Codec</th>
                                                     <th align="left" id="video_resolution">Video Resolution</th>
-                                                    <th align="left" id="video_profile">Video Profile</th>
+                                                    <th align="left" id="video_dynamic_range">Video Dyn. Range</th>
                                                     <th align="left" id="video_resolution">Video Framerate</th>
                                                     <th align="left" id="audio_codec">Audio Codec</th>
                                                     <th align="left" id="audio_channels">Audio Channels</th>
