Colour active filter buttons

--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -21,10 +21,10 @@
                 </label>
             </div>
             <div class="btn-group" style="margin-right: 2px;" data-toggle="buttons" id="yaxis-selection">
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="radio" name="yaxis-options" id="yaxis-plays" value="plays" autocomplete="off"> Play Count
                 </label>
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="radio" name="yaxis-options" id="yaxis-duration" value="duration" autocomplete="off"> Play Duration
                 </label>
             </div>
