--- a/data/interfaces/default/history.html
+++ b/data/interfaces/default/history.html
@@ -39,27 +39,27 @@
             </div>
             % endif
             <div class="btn-group" data-toggle="buttons" id="media_type-selection">
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="checkbox" name="media_type-filter" id="history-media_type-movie" value="movie" autocomplete="off"><i class="fa fa-film"></i> Movies
                 </label>
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="checkbox" name="media_type-filter" id="history-media_type-episode" value="episode" autocomplete="off"><i class="fa fa-television"></i> TV Shows
                 </label>
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="checkbox" name="media_type-filter" id="history-media_type-track" value="track" autocomplete="off"><i class="fa fa-music"></i> Music
                 </label>
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="checkbox" name="media_type-filter" id="history-media_type-live" value="live" autocomplete="off"><i class="fa fa-broadcast-tower"></i> Live TV
                 </label>
             </div>
             <div class="btn-group" data-toggle="buttons" id="transcode_decision-selection">
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="checkbox" name="transcode_decision-filter" id="history-transcode_decision-direct_play" value="direct play" autocomplete="off"><i class="fa fa-play-circle"></i> Direct Play
                 </label>
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="checkbox" name="transcode_decision-filter" id="history-transcode_decision-copy" value="copy" autocomplete="off"><i class="fa fa-stream"></i> Direct Stream
                 </label>
-                <label class="btn btn-dark">
+                <label class="btn btn-dark btn-filter">
                     <input type="checkbox" name="transcode_decision-filter" id="history-transcode_decision-transcode" value="transcode" autocomplete="off"><i class="fa fa-server"></i> Transcode
                 </label>
             </div>
