--- a/data/interfaces/default/index.html
+++ b/data/interfaces/default/index.html
@@ -42,10 +42,10 @@
                 <h3 class="pull-left">Watch Statistics</h3>
                 <div class="button-bar">
                     <div class="btn-group pull-left" data-toggle="buttons" id="watch-stats-toggles" style="margin-right: 3px">
-                        <label class="btn btn-dark">
+                        <label class="btn btn-dark btn-filter">
                             <input type="radio" class="watched-stats-toggle" name="watched-stats-type" id="watched-stats-plays" value="plays" autocomplete="off"> Play Count
                         </label>
-                        <label class="btn btn-dark">
+                        <label class="btn btn-dark btn-filter">
                             <input type="radio" class="watched-stats-toggle" name="watched-stats-type" id="watched-stats-duration" value="duration" autocomplete="off"> Play Duration
                         </label>
                     </div>
@@ -100,19 +100,19 @@
                 </ul>
                 <div class="button-bar">
                     <div class="btn-group pull-left" data-toggle="buttons" id="recently-added-toggles" style="margin-right: 3px">
-                        <label class="btn btn-dark" id="recently-added-label-all">
+                        <label class="btn btn-dark btn-filter" id="recently-added-label-all">
                             <input type="radio" name="recently-added-toggle" id="recently-added-toggle-all" value="all" autocomplete="off"> All
                         </label>
-                        <label class="btn btn-dark" id="recently-added-label-movies">
+                        <label class="btn btn-dark btn-filter" id="recently-added-label-movies">
                             <input type="radio" name="recently-added-toggle" id="recently-added-toggle-movie" value="movie" autocomplete="off"> Movies
                         </label>
-                        <label class="btn btn-dark" id="recently-added-label-tv">
+                        <label class="btn btn-dark btn-filter" id="recently-added-label-tv">
                             <input type="radio" name="recently-added-toggle" id="recently-added-toggle-show" value="show" autocomplete="off"> TV Shows
                         </label>
-                        <label class="btn btn-dark" id="recently-added-label-music">
+                        <label class="btn btn-dark btn-filter" id="recently-added-label-music">
                             <input type="radio" name="recently-added-toggle" id="recently-added-toggle-artist" value="artist" autocomplete="off"> Music
                         </label>
-                        <label class="btn btn-dark" id="recently-added-label-other_video">
+                        <label class="btn btn-dark btn-filter" id="recently-added-label-other_video">
                             <input type="radio" name="recently-added-toggle" id="recently-added-toggle-other_video" value="other_video" autocomplete="off"> Videos
                         </label>
                     </div>
