Escape characters in username log filter
* Remove filter for friendly names

--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -164,7 +164,7 @@
                                 <input type="checkbox" id="log_blacklist_usernames" name="log_blacklist_usernames" value="1" ${config['log_blacklist_usernames']}> Mask Usernames in Logs
                             </label>
                             <p class="help-block">
-                                Enable to mask Plex usernames and Tautulli friendly names with asterisks (*) in the logs.<br />
+                                Enable to mask Plex usernames with asterisks (*) in the logs.<br />
                                 Note: Only logs from the time this setting is enabled will be masked.
                             </p>
                         </div>
