Update App Store link to specify iphone

--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -1582,7 +1582,7 @@
                                 Get the Tautulli Remote app on
                                 <a href="${anon_url('https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote')}" target="_blank" rel="noreferrer">Google Play</a>
                                 or the
-                                <a href="${anon_url('https://apps.apple.com/us/app/tautulli-remote/id1570909086')}" target="_blank" rel="noreferrer">App Store</a>
+                                <a href="${anon_url('https://apps.apple.com/us/app/tautulli-remote/id1570909086?platform=iphone')}" target="_blank" rel="noreferrer">App Store</a>
                                 to access Tautulli from your mobile device.
                                 <br />
                             </p>
@@ -1591,7 +1591,7 @@
                                     <a href="${anon_url('https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote')}" target="_blank" rel="noreferrer"><img alt="Get it on Google Play" src="images/google-play-badge.svg" /></a>
                                 </span>
                                 <span class="app-badge">
-                                    <a href="${anon_url('https://apps.apple.com/us/app/tautulli-remote/id1570909086')}" target="_blank" rel="noreferrer"><img alt="Download on the App Store" src="images/app-store-badge.svg" /></a>
+                                    <a href="${anon_url('https://apps.apple.com/us/app/tautulli-remote/id1570909086?platform=iphone')}" target="_blank" rel="noreferrer"><img alt="Download on the App Store" src="images/app-store-badge.svg" /></a>
                                 </span>
                                 <span class="app-badge">
                                     <small>Google Play and the Google Play logo are trademarks of Google LLC.</small>
