--- a/data/interfaces/default/users.html
+++ b/data/interfaces/default/users.html
@@ -33,6 +33,8 @@
                 <th align="left" id="edit_row">Edit</th>
                 <th align="right" id="avatar"></th>
                 <th align="left" id="friendly_name">User</th>
+                <th align="left" id="username">Username</th>
+                <th align="left" id="email">Email</th>
                 <th align="left" id="last_seen">Last Streamed</th>
                 <th align="left" id="last_known_ip">Last Known IP</th>
                 <th align="left" id="last_platform">Last Platform</th>
