--- a/data/interfaces/default/users.html
+++ b/data/interfaces/default/users.html
@@ -34,6 +34,7 @@
                 <th align="right" id="avatar"></th>
                 <th align="left" id="friendly_name">User</th>
                 <th align="left" id="username">Username</th>
+                <th align="left" id="title">Full Name</th>
                 <th align="left" id="email">Email</th>
                 <th align="left" id="last_seen">Last Streamed</th>
                 <th align="left" id="last_known_ip">Last Known IP</th>
