--- a/data/interfaces/default/base.html
+++ b/data/interfaces/default/base.html
@@ -236,6 +236,7 @@ ${next.modalIncludes()}
                 <ul id="donation_type" class="nav nav-pills" role="tablist" style="display: flex; justify-content: center; margin: 10px 0;">
                     <li class="active"><a href="#github-donation" role="tab" data-toggle="tab">GitHub</a></li>
                     <li><a href="#patreon-donation" role="tab" data-toggle="tab">Patreon</a></li>
+                    <li><a href="#stripe-donation" role="tab" data-toggle="tab">Stripe</a></li>
                     <li><a href="#paypal-donation" role="tab" data-toggle="tab">PayPal</a></li>
                     <li><a href="#crypto-donation" role="tab" data-toggle="tab">Crypto</a></li>
                 </ul>
@@ -261,6 +262,17 @@ ${next.modalIncludes()}
                             </a>
                         </p>
                         <p class="small-muted">(Patreon has a fee)</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="stripe-donation" style="text-align: center">
+                        <p>
+                            Click the button below to continue to Stripe.
+                        </p>
+                        <p>
+                            <a href="${anon_url('https://donate.stripe.com/5kA7vnb7dczVbxC9AA')}" target="_blank" rel="noreferrer">
+                                <img src="images/Stripe_wordmark_-_white_small_28px.png" alt="Stripe" style="background-color: #7068fe; border-radius: 3px; padding: 3px;">
+                            </a>
+                        </p>
+                        <p class="small-muted">(Stripe has a fee)</p>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="paypal-donation" style="text-align: center">
                         <p>
