Update PayPal URL

--- a/data/interfaces/default/base.html
+++ b/data/interfaces/default/base.html
@@ -279,7 +279,7 @@ ${next.modalIncludes()}
                             Click the button below to continue to PayPal.
                         </p>
                         <p>
-                            <a href="${anon_url('https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=6XPPKTDSX9QFL&lc=US&item_name=Tautulli&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted')}" target="_blank" rel="noreferrer">
+                            <a href="${anon_url('https://www.paypal.com/donate/?hosted_button_id=CUHSQ99KAKC5Q')}" target="_blank" rel="noreferrer">
                                 <img src="images/gold-rect-paypal-34px.png" alt="PayPal">
                             </a>
                         </p>
