--- a/data/interfaces/default/index.html
+++ b/data/interfaces/default/index.html
@@ -796,6 +796,7 @@
             var grandparent_rating_key = $(elem).data('grandparent_rating_key');
             var guid = $(elem).data('guid');
             var live = $(elem).data('live');
+            var library_art = $(elem).data('library_art');
             var [height, fallback_poster, fallback_art] = [450, 'poster', 'art'];
             if ($.inArray(stat_id, ['top_music', 'popular_music']) > -1) {
                 [height, fallback_poster, fallback_art] = [300, 'cover', 'art'];
@@ -807,7 +808,7 @@
             if (stat_id === 'most_concurrent') {
                 return
             } else if (stat_id === 'top_libraries') {
-                $('#stats-background-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', art, null, 500, 280, 40, '282828', 3, fallback_art) + ')');
+                $('#stats-background-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', art || library_art, null, 500, 280, 40, '282828', 3, library_art || fallback_art) + ')');
                 $('#stats-thumb-' + stat_id).removeClass(function (index, className) {
                     return (className.match (/(^|\s)svg-icon library-\S+/g) || []).join(' ')});
                 if (thumb.startsWith('http')) {
@@ -843,7 +844,7 @@
                 $('#stats-background-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', art, img_rating_key, 500, 280, 40, '282828', 3, fallback_art) + ')');
                 $('#stats-thumb-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', thumb, img_rating_key, 300, height, null, null, null, fallback_poster) + ')');
                 $('#stats-thumb-' + stat_id + '-bg').css('background-image', 'url(' + page('pms_image_proxy', thumb, img_rating_key, 300, height, 60, '282828', 3, fallback_poster) + ')');
-                $('#library-stats-background-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', art, img_rating_key, 500, 280, 40, '282828', 3, fallback_art) + ')');
+                $('#library-stats-background-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', art || library_art, img_rating_key, 500, 280, 40, '282828', 3, library_art || fallback_art) + ')');
                 if (thumb.startsWith('http')) {
                     $('#library-stats-thumb-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', thumb, img_rating_key, 300, 300, null, null, null, 'cover') + ')')
                         .removeClass('svg-icon library-' + stat_id);
