Change export m3u8 to m3u extension
* m3u files are still encoded using UTF-8

--- a/data/interfaces/default/export_modal.html
+++ b/data/interfaces/default/export_modal.html
@@ -226,7 +226,7 @@ DOCUMENTATION :: END
     getExportFields();
 
     $('#export_file_format').on('change', function() {
-        if ($(this).val() === 'm3u8') {
+        if ($(this).val() === 'm3u') {
             $('#export_metadata_level').prop('disabled', true);
             $('#export_media_info_level').prop('disabled', true);
             $("#export_thumb_level").prop('disabled', true);
