--- a/data/interfaces/newsletters/recently_added.html
+++ b/data/interfaces/newsletters/recently_added.html
@@ -24,6 +24,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width">
+    <meta name="color-scheme" content="light dark">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Tautulli Newsletter - ${subject}</title>
     <link rel="shortcut icon" href="${base_url_image + 'images/favicon/favicon.ico' if base_url_image else 'https://tautulli.com/images/favicon.ico'}">
